--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,14 @@
 
 ---
 
-<header class="w-full py-4 border-b-2 border-white">
-  <div class="container m-auto">
-    <nav class="w-full h-full text-white">
+<header class="w-full py-4 border-b-2 border-white bg-[#0d0d0d]">
+  <div class="container m-auto flex gap-5 items-center">
+    <img
+      src="/logo.png"
+      class="w-12 h-12 absolute top-2 left-10"
+      alt="Logo circular com fundo preto e e letras K e V douradas."
+    />
+    <nav class="w-full text-white">
       <ul class="flex w-full h-full justify-between items-center text-2xl">
         <li>
           <a
