--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
 }
@@ -17,9 +18,10 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="min-h-screen bg-zinc-900">
+  <body class="min-h-screen bg-zinc-800">
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 
