--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Kadu Portfolio">
-  <main>
+  <main class="pt-16">
     <section
       id="home"
       class="w-full bg-[url(/background.webp)] bg-no-repeat bg-cover bg-center bg-fixed"
