--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,17 +3,20 @@
 ---
 
 <div
-  class="w-full h-screen flex justify-center items-center bg-black/[0.7] text-white text-5xl"
+  class="w-full h-screen text-center flex justify-center px-4 items-center bg-black/[0.7] text-white text-3xl lg:text-5xl"
 >
-  <h1>
-    Procurando um desenvolvedor <strong class="underline text-gold"
-      >Full-Stack</strong
-    ><span>?</span>
+  <h1 class="hidden md:block desktop">
+    Procurando um desenvolvedor
+    <strong class="underline text-gold">Full-Stack</strong><span>?</span>
+  </h1>
+  <h1 class="md:hidden">
+    Procurando um desenvolvedor
+    <strong class="underline text-gold">Full-Stack</strong><span>?</span>
   </h1>
 </div>
 
 <style>
-  h1 {
+  .desktop {
     overflow: hidden;
     border-right: 0.1em solid transparent;
     white-space: nowrap;
