--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="min-h-screen bg-zinc-800">
+  <body class="bg-zinc-800">
     <Header />
     <slot />
     <Footer />
@@ -40,6 +40,7 @@ const { title } = Astro.props;
 
   section {
     min-height: 100vh;
+    max-width: 100vw;
   }
 
   @media (prefers-reduced-motion) {
