--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <header
-  class="w-full min-h-[4rem] duration-1000 overflow-hidden max-h-16 flex p-4 gap-4 border-b-2 border-white bg-[#0d0d0d] absolute Kheader"
+  class="w-full min-h-[4rem] duration-1000 overflow-hidden max-h-16 flex flex-col p-4 gap-4 border-b-2 border-white bg-[#0d0d0d] absolute Kheader"
 >
   <img
     src="/logo.png"
@@ -11,7 +11,7 @@
     alt="Logo circular com fundo preto e e letras K e V douradas."
   />
   <button
-    class="header-button absolute right-2 top-4 h-10 md:hidden outline-none border-2 border-transparent focus:border-gold rounded-sm"
+    class="header-button absolute right-2 top-3 h-10 md:hidden outline-none border-2 border-transparent focus:border-gold rounded-sm"
     aria-controls="navigation"
     aria-expanded="false"
   >
@@ -61,14 +61,14 @@
             <div class="duration-200"></div>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <button
             class="hover:text-gold focus:text-gold duration-200 cursor-pointer outline-none header-item"
           >
             Idioma
             <div class="duration-200"></div>
           </button>
-        </li>
+        </li> -->
       </ul>
     </nav>
   </div>
