--- a/src/components/Projetos.astro
+++ b/src/components/Projetos.astro
@@ -7,13 +7,13 @@ const { projects } = JSONprojects;
 ---
 
 <div class="flex flex-col py-12 items-center gap-16">
-  <h1 class="text-5xl z-10">Projetos</h1>
+  <h1 class="text-4xl lg:text-5xl z-10">Projetos</h1>
   <div class="container grid grid-cols-1 gap-16 z-10">
     {projects && projects.map((project) => <Projeto projectInfo={project} />)}
   </div>
   <div class="container z-10">
-    <h2 class="text-4xl mb-10">Projetos do Front End Mentor</h2>
-    <p class="text-xl mb-1">
+    <h2 class="text-2xl md:text-4xl mb-10">Projetos do Front End Mentor</h2>
+    <p class="text-sm md:text-xl mb-1">
       Esses são alguns projetos mais simples e menores tirados do site <a
         class="text-bold underline text-gold"
         href="https://www.frontendmentor.io/"
@@ -21,11 +21,13 @@ const { projects } = JSONprojects;
       >, site focado em projetos para testar e aperfeiçoar as habilidades dos
       devs.
     </p>
-    <span class="text-xl">
+    <span class="text-sm md:text-xl">
       Eles são todos responsivos, usando a estratégia de mobile first e
       construídos com apenas Javascript, HTML e CSS</span
     >
-    <div class="grid grid-cols-3 gap-x-12 px-4 mt-8">
+    <div
+      class="grid grid-cols-1 lg:grid-cols-3 gap-y-10 gap-x-8 xl:gap-x-12 mt-8"
+    >
       <FrontEndMentorCard
         gitHubURL="https://github.com/KaduViana1/princing-component-with-toggle"
         imageURL="pricing-component"
