--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 <footer
   class="w-full border-t-2 border-white flex justify-center items-center py-4 gap-2 bg-[#0d0d0d]"
 >
-  <span class="text-lg">Criado por Kadu Viana</span>
+  <span class="text-md md:text-lg">Criado por Kadu Viana</span>
   <img
     src="/logo.png"
     class="w-4 h-4"
@@ -16,21 +16,21 @@
     target="_blank"
   >
     <img
-      class="w-8 h-8 rounded-md inline-block ml-2 bg-white"
+      class="w-6 h-6 md:w-8 md:h-8 rounded-md inline-block ml-2 bg-white"
       src="/icons/linkedin.png"
       alt="linkedin icon"
     />
   </a>
   <a href="https://github.com/KaduViana1" target="_blank">
     <img
-      class="w-8 h-8 rounded-full inline-block ml-2 bg-white"
+      class="w-6 h-6 md:w-8 md:h-8 rounded-full inline-block ml-2 bg-white"
       src="/icons/github.png"
       alt="github icon"
     />
   </a>
   <a href="https://www.instagram.com/kaduv96/" target="_blank">
     <img
-      class="w-8 h-8 rounded-lg inline-block ml-2 bg-white"
+      class="w-6 h-6 md:w-8 md:h-8 rounded-lg inline-block ml-2 bg-white"
       src="/icons/instagram.png"
       alt="instagram icon"
     />
