--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@
     alt="Logo circular com fundo preto e e letras K e V douradas."
   />
   <button
-    class="header-button absolute right-2 top-3 h-10 md:hidden outline-none border-2 border-transparent focus:border-gold rounded-sm"
+    class="header-button absolute right-2 top-3 h-10 md:hidden outline-none"
     aria-controls="navigation"
     aria-expanded="false"
   >
