--- a/src/components/IconsBackground.astro
+++ b/src/components/IconsBackground.astro
@@ -3,14 +3,14 @@
 ---
 
 <div class="background">
-  <div class="back-shapes text-center overflow-x-hidden px-4 md:px-0">
+  <div class="back-shapes text-center overflow-hidden px-4 md:px-0">
     <span
       class="icon js"
-      style="top:66.59856996935649%;left:13.020833333333334%;animation-delay:-0.9s;"
+      style="top:69.59856996935649%;left:13.020833333333334%;animation-delay:-0.9s;"
     ></span>
     <span
       class="icon astro"
-      style="top:55.59856996935649%;left:20.020833333333334%;animation-delay:-3.9s;"
+      style="top:58.59856996935649%;left:5.020833333333334%;animation-delay:-3.9s;"
     ></span>
     <span
       class="icon vue"
@@ -41,6 +41,10 @@
       style="top:69.96935648621042%;left:81.45833333333333%;animation-delay:-0.4s;"
     ></span>
     <span
+      class="icon css"
+      style="top:49.96935648621042%;left:91.45833333333333%;animation-delay:-0.4s;"
+    ></span>
+    <span
       class="icon js"
       style="top:15.117466802860061%;left:32.34375%;animation-delay:-4.1s;"
     ></span>
@@ -65,7 +69,7 @@
     ></span>
     <span
       class="icon css"
-      style="top:28.19203268641471%;left:25.208333333333332%;animation-delay:-4.45s;"
+      style="top:24.19203268641471%;left:25.208333333333332%;animation-delay:-4.45s;"
     ></span>
     <span
       class="icon mongo"
@@ -84,6 +88,10 @@
       style="top:71.3993871297242%;left:68.45833333333333%;animation-delay:-1.25s;"
     ></span>
     <span
+      class="icon docker"
+      style="top:68.3993871297242%;left:57.45833333333333%;animation-delay:-0.25s;"
+    ></span>
+    <span
       class="icon redux"
       style="top:31.256384065372828%;left:76.92708333333333%;animation-delay:-0.65s;"
     ></span>
@@ -99,6 +107,10 @@
       class="icon sass"
       style="top:3.575076608784474%;left:6.25%;animation-delay:-4.05s;"></span>
     <span
+      class="icon vue"
+      style="top:10.575076608784474%;left:10.25%;animation-delay:-4.05s;"
+    ></span>
+    <span
       class="icon tailwind"
       style="top:77.3237997957099%;left:4.583333333333333%;animation-delay:-3.75s;"
     ></span>
@@ -111,12 +123,32 @@
       style="top:0.9193054136874361%;left:71.14583333333333%;animation-delay:-3.3s;"
     ></span>
     <span
-      class="icon redux"
+      class="icon js"
+      style="top:0.7193054136874361%;left:31.14583333333333%;animation-delay:-2.3s;"
+    ></span>
+    <span
+      class="icon node"
       style="top:23.6976506639428%;left:63.28125%;animation-delay:-2.1s;"
     ></span>
     <span
       class="icon next"
-      style="top:87.30745658835546%;left:45.15625%;animation-delay:-1.75s;"
+      style="top:92.30745658835546%;left:45.15625%;animation-delay:-1.75s;"
+    ></span>
+    <span
+      class="icon sql"
+      style="top:82.30745658835546%;left:65.15625%;animation-delay:-1.25s;"
+    ></span>
+    <span
+      class="icon tailwind"
+      style="top:92.30745658835546%;left:25.15625%;animation-delay:-0.75s;"
+    ></span>
+    <span
+      class="icon astro"
+      style="top:87.30745658835546%;left:95.15625%;animation-delay:-1.05s;"
+    ></span>
+    <span
+      class="icon express"
+      style="top:87.30745658835546%;left:3.15625%;animation-delay:-1.25s;"
     ></span>
     <span
       class="icon node"
@@ -129,6 +161,14 @@
     <span
       class="icon sass"
       style="top:52.093973442288046%;left:68.90625%;animation-delay:-0.7s;"
+    ></span>
+    <span
+      class="icon ts"
+      style="top:45.093973442288046%;left:73.90625%;animation-delay:-0.5s;"
+    ></span>
+    <span
+      class="icon redux"
+      style="top:39.093973442288046%;left:62.90625%;animation-delay:-0.90s;"
     ></span>
     <span
       class="icon tailwind"
