--- a/src/components/Projetos.astro
+++ b/src/components/Projetos.astro
@@ -26,11 +26,12 @@ const { projects } = JSONprojects;
       construídos com apenas Javascript, HTML e CSS</span
     >
     <div
-      class="grid grid-cols-1 lg:grid-cols-3 gap-y-10 gap-x-8 xl:gap-x-12 mt-8"
+      class="grid grid-cols-1 auto-rows-[1fr] lg:grid-cols-3 gap-y-10 gap-x-8 xl:gap-x-12 mt-8"
     >
       <FrontEndMentorCard
         gitHubURL="https://github.com/KaduViana1/princing-component-with-toggle"
         imageURL="pricing-component"
+        classes="mentor-card opacity-0"
       >
         <p>
           Um componente de preços com um botão para mudar entre tipos de planos.
@@ -39,15 +40,18 @@ const { projects } = JSONprojects;
       <FrontEndMentorCard
         gitHubURL="https://github.com/KaduViana1/News-Homepage-Front-Mentor-"
         imageURL="news-page"
+        classes="mentor-card card-2 opacity-0"
       >
         <p>
           Uma página de noticias com um simples menu de modal. Na versão mobile
           o cabeçalho vira um icone para abrir o menu.
         </p>
       </FrontEndMentorCard>
+
       <FrontEndMentorCard
         gitHubURL="https://github.com/KaduViana1/calculator-app"
         imageURL="calculator"
+        classes="mentor-card card-3 opacity-0"
       >
         <p>
           Uma Calculadora com três temas de cores, usando
@@ -58,5 +62,3 @@ const { projects } = JSONprojects;
     </div>
   </div>
 </div>
-
-<script></script>
